# Devliz

./: .gitignore  CHANGELOG.md  installer.iss  makefile  project.mk  pyproject.toml  qt.mk
.github/workflows/: release.yml
devliz/: dash_controller.py  dash_model.py  dash_view.py  main.py  project.py
devliz/application/: action_history.py  app.py  i18n.py
devliz/application/resources/: resources_rc.py
devliz/controller/: action_history.py  catalogue.py  catalogue_controller.py  catalogue_searcher.py  catalogue_searcher_controller.py  dash_controller.py  dashboard.py  help.py  home.py  setting_controller.py
devliz/domain/: data.py
devliz/model/: catalogue.py  catalogue_seacher_model.py  catalogue_searcher.py  dash_model.py  dashboard.py  devliz_update.py
devliz/resources/: resources_rc.py
devliz/ui/: demo.py  splash.py
devliz/ui/setting/: widget.py
devliz/view/: action_history.py  catalogue.py  catalogue_imp_dialog.py  catalogue_imp_tab_details.py  catalogue_imp_tab_directories.py  catalogue_imp_tabs.py  catalogue_searcher.py  catalogue_searcher_view.py  dash_view.py  dashboard.py  help.py  home.py  setting.py
devliz/view/util/: frame.py  setting.py
devliz/view/widgets/: catalogue.py  catalogue_imp_dialog.py  catalogue_imp_tab_details.py  catalogue_imp_tabs.py  catalogue_searcher_view.py  setting.py  splash.py
resources/: resources.qrc
test/: conftest.py  test_action_history.py  test_dashboard_controller.py  test_dashboard_model.py  test_devliz_update.py  test_domain_data.py  test_i18n.py
