[project]
name = "devliz"
version = "1.0.0"
description = "Add your description here"
requires-python = ">=3.12"
authors = [
    {name = "Gabliz", email = "gabliz.dev@gmail.com"},
]
dependencies = [
    "loguru>=0.7.3",
    "pylizlib>=0.3.20",
    "pyside6>=6.10.0",
    "pyside6-fluent-widgets[full]>=1.9.1",
]

[project.optional-dependencies]
qtfw = [
    "pylizlib>=0.3.21",
]

[dependency-groups]
dev = [
    "ruff>=0.14.1",
]
