[project]
name = "devliz"
version = "0.1.5"
description = "Add your description here"
requires-python = ">=3.12"
authors = [
    {name = "Gabliz", email = "gabliz.dev@gmail.com"},
]
dependencies = [
    "loguru>=0.7.3",
    "loguru-logging-intercept>=0.1.5",
    "pylizlib>=0.6.2",
    "pyside6>=6.11.0",
    "pyside6-fluent-widgets[full]>=1.11.2",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["devliz*"]


[project.optional-dependencies]
qtfw = [
    "pylizlib>=0.3.21",
]

[dependency-groups]
dev = [
    "ty",
    "pdoc",
    "pytest",
    "pytest-cov",
    "ruff",
]

